# cortex

./: .env.example  .gitignore  README.md  audit_latest.md  colab_gpu_use.ipynb  cortex_colab_t4_notebook_fixed.ipynb  cortex_unified_notebook.ipynb  cortex_vllm_setup.ipynb  docker-compose.yml  implementation_plan.md  render.yaml  risk_register.md  submission_checklist.md  update_notebooks.py  update_vllm.py
backend/: .env.example  add_col.py  check_db.py  check_env.py  check_system.py  fix_imports.py  pyproject.toml  reset_dbs.py
backend/alembic/: env.py
backend/alembic/versions/: 66ea9fe97ae0_add_facts_and_entities.py  8fb23a18ce6e_add_embedding_and_chunk_columns.py  d41875653324_add_parsed_output_columns.py  d58ac1849c7c_add_graph_job_status_enum.py  e0fc3d60a486_create_documents_table.py
backend/app/: main.py
backend/app/agents/: __init__.py
backend/app/api/: agents.py  graph.py  query.py
backend/app/db/: connection.py  (+2 more)
backend/deprecated/: graph_indexer.py  test_graph_indexer.py
backend/fabric_api/: __init__.py  dlq_recovery.py  exception_handlers.py  lifespan.py  main.py  middleware.py
backend/ingestion_worker/: __init__.py  embedding_jobs.py  graph_jobs.py  graph_prompts.py  jobs.py  main.py  orchestrator.py
backend/scripts/: reembed_documents.py
backend/shared/: __init__.py  config.py  constants.py  database.py  exceptions.py  http_clients.py  llm_clients.py  logging.py  neo4j_client.py  qdrant_client.py  query_classification.py  redis_client.py  rq_policy.py  security.py  storage.py
backend/tests/: test_copilot_orchestrator.py  test_dlq_recovery.py  test_fusion.py  test_graph_extraction.py  test_reranking.py  test_retrieval.py  test_retrieval_pipeline.py  test_security.py  test_sse_events.py  test_supervisor_routing.py  test_upload.py  test_upload_delete.py
(+141 files in other folders)
