[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "docling>=2.110.0",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.7",
    "langgraph>=1.2.8",
    "neo4j>=6.2.0",
    "openai>=2.44.0",
    "orjson>=3.11.9",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "rq>=2.10.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "tenacity>=8.2.0",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
